--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -21,3 +21,17 @@
 	padding: 15px 0px;
 	box-sizing: border-box;
 }
+
+.project {
+	margin-top: 50px;
+}
+
+.tasks {
+	margin-top: 50px;
+}
+.column-title {
+	font-size: 24px; /* Размер шрифта */
+	font-weight: bold; /* Жирность текста */
+	color: #553c9a; /* Цвет текста */
+	margin-bottom: 20px;
+}
