Add Admin Panel

--- a/frontend/src/sass/components/_drawer.scss
+++ b/frontend/src/sass/components/_drawer.scss
@@ -26,4 +26,17 @@
 	&__language {		
 		margin-bottom: 15px;
 	}
+
+	&-admin {
+		padding-right: 50px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+		&-title {
+			font-size: 1.4rem;
+			font-weight: 500;
+			padding-left: 50px;
+		}
+	}
 }
