--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -18,7 +18,7 @@
 .container {
 	max-width: 1250px;
 	margin: 0 auto;
-	padding: 15px 0px;
+	padding: 0px 12px;
 	box-sizing: border-box;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .tasks {
-	margin-top: 50px;
+	margin-top: 35px;
 }
 .column-title {
 	font-size: 24px; /* Размер шрифта */
@@ -49,5 +49,24 @@
 	&-buttons {
 		display: flex;
 		justify-content: space-between;
+	}
+}
+
+.header__box {
+	margin-left: auto;
+}
+
+@media (max-width: 620px) {
+	.header__flex {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		margin-left: 0px;
+		padding-top: 10px;
+	}
+
+	.header__box {
+		margin-left: 0px;
+		margin-top: 20px;
 	}
 }
